objects/vlocity_cmt__QuoteProductRollup__c.object
<CustomObject>
    <description>Stores Product and Category Quantity rollups for Quote</description>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Catalog Id for which the rollup quantity is stored.</description>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Quote Product Rollups</relationshipLabel>
        <relationshipName>QuoteProductRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentDiscountRange__c</fullName>
        <label>Current Discount Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DiscountQuantity__c</fullName>
        <description>Discount Quantity</description>
        <label>Discount Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NeedsPricing__c</fullName>
        <formula>(VALUE(vlocity_cmt__CurrentDiscountRange__c) - VALUE(vlocity_cmt__PreviousDiscountRange__c)) != 0.0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PreviousDiscountRange__c</fullName>
        <label>Previous Discount Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Product Id for which the rollup quantity is stored.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Product Rollups</relationshipLabel>
        <relationshipName>QuoteProductRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Quote Group Id for which rollup quantities is calculated.</description>
        <label>Quote Group</label>
        <referenceTo>vlocity_cmt__QuoteGroup__c</referenceTo>
        <relationshipLabel>Quote Product Rollups</relationshipLabel>
        <relationshipName>QuoteProductRollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <description>Stores the Quote Id for which we the rollup quantity is stored.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Product Rollups</relationshipLabel>
        <relationshipName>QuoteProductRollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RollupType__c</fullName>
        <label>Rollup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Group Rollup</fullName>
                </value>
                <value>
                    <fullName>Total Quote Rollup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalAssetQuantity__c</fullName>
        <description>Stores the total assets rollup quantity</description>
        <label>Total Asset Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalQuoteQuantity__c</fullName>
        <description>Stores the total rollup quantity</description>
        <label>Total Quote Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Product Rollup</label>
    <nameField>
        <label>Quote Product Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>